atualização do login e ajustes no frontend e estoque git push

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,21 +4,47 @@
   <meta charset="UTF-8" />
   <title>Login</title>
   <link rel="stylesheet" href="/src/style.css" />
+   <link rel="stylesheet" href="/src/styleLogin.css" />
 </head>
-
 <body class="login-page">
 
-  <form id="loginForm" class="login-box">
-    <h2>Login</h2>
+  <div class="login-wrapper">
+    <form id="loginForm" class="login-card">
+      
+      <h1>Login</h1>
+      <hr>
 
-    <input id="email" type="email" placeholder="Email" required />
-    <input id="senha" type="password" placeholder="Senha" required />
+      <div class="form-group">
+        <label for="email">Seu e-mail</label>
+        <input id="email" type="email" placeholder="contato@empresa.com" required />
+      </div>
 
-    <button type="submit">Entrar</button>
+      <div class="form-group">
+        <label for="senha">Sua senha</label>
+        <input id="senha" type="password" placeholder="••••••••" required />
+      </div>
 
-    <p id="erroLogin"></p>
-  </form>
+      <div class="options">
+        <label class="checkbox">
+          <input type="checkbox">
+          Manter-me logado
+        </label>
+      </div>
+
+      <button type="submit" class="btn-primary">Logar</button>
+
+      <p id="erroLogin" class="erro-msg"></p>
+
+      <div class="register">
+        Ainda não tem conta?
+        <a href="#">Cadastre-se</a>
+      </div>
+
+    </form>
+  </div>
 
   <script type="module" src="/src/login.js"></script>
 </body>
+
+
 </html>
